[gd_scene load_steps=7 format=3 uid="uid://bnlnfejyhrq23"]

[ext_resource type="StyleBox" uid="uid://241hr8uf5jbx" path="res://UI/panel_style.tres" id="1_11707"]
[ext_resource type="Script" uid="uid://di46y6dqykuid" path="res://UI/BasePanel/base_panel.gd" id="1_ji5xj"]

[sub_resource type="Animation" id="Animation_rvgky"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-448, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mir5y"]
resource_name = "close"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-448, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_sxbgx"]
resource_name = "open"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1.03526),
"update": 0,
"values": [Vector2(-448, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rvgky"]
_data = {
&"RESET": SubResource("Animation_rvgky"),
&"close": SubResource("Animation_mir5y"),
&"open": SubResource("Animation_sxbgx")
}

[node name="BasePanel" type="PanelContainer"]
visible = false
custom_minimum_size = Vector2(448, 0)
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -448.0
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_11707")
script = ExtResource("1_ji5xj")
panel_name = null

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Contents" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Close" type="Button" parent="MarginContainer/Contents"]
custom_minimum_size = Vector2(192, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Close"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rvgky")
}

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="MarginContainer/Contents/Close" to="." method="_on_close_pressed"]
